Update 【Day 44】837. New 21 Game.md

--- a/【Day 44】837. New 21 Game.md
+++ b/【Day 44】837. New 21 Game.md
@@ -78,5 +78,5 @@ dp[i] is the probability that we can get i at some moment during this game. dp[i
     p(K) = wsum / W
 ```
 
-**Time Complexity:** O(N)
+**Time Complexity:** O(N)\
 **Space Complexity:** O(N)
