Update 【Day 46】76.Minimum Window Substring.md

--- a/【Day 46】76.Minimum Window Substring.md
+++ b/【Day 46】76.Minimum Window Substring.md
@@ -26,8 +26,8 @@ class Solution:
 ```
 
 ## Analysis
-Use sliding window. Firstly move p2 and find a window contain all the char in t, then try to shrink p1 while this window is valid, once done move p2 to the right then try to shrink p1 again. The entire process (after finding first valid window) we maintain this window to be valid. The trick here is to use a hashmap to track the char in the window compared to the chars in t(the actual chars we need). This hashmap is initiated with a counter of t. Each time we find a char to be included in window also in this counter we minus 1 to its count. So when a char's count is positive, we need to find this number more of this char. When a char's count is negative, we have some extra ones and could be shrinked. \ 
+Use sliding window. Firstly move p2 and find a window contain all the char in t, then try to shrink p1 while this window is valid, once done move p2 to the right then try to shrink p1 again. The entire process (after finding first valid window) we maintain this window to be valid. The trick here is to use a hashmap to track the char in the window compared to the chars in t(the actual chars we need). This hashmap is initiated with a counter of t. Each time we find a char to be included in window also in this counter we minus 1 to its count. So when a char's count is positive, we need to find this number more of this char. When a char's count is negative, we have some extra ones and could be shrinked. 
 
 Time Complexity: O(N + M)\
-Space Complexity: O(M)
+Space Complexity: O(M)\
 Here N is the length of s and M is the length of t.
